fix quiz structure

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -68,22 +68,22 @@ If you'd like to offer anonymous feedback to me, click the button below.
 
 ## Quizzes
 
-| Date | Quiz | Solutions |
+| Date | Quiz Solutions |
 | :--------- | :-----  | :---- |
-| Wednesday, September 15 |  [Quiz 1](/Quizzes/Quiz_1.pdf) | [Solutions](/Quizzes/Quiz_1_Solution.pdf)  | 
-| Wednesday, September 22 |  [Quiz 2](/Quizzes/Quiz_2.png) | [Solutions](/Quizzes/Quiz_2_Solution.pdf)  |
-| Wednesday, September 29 |  Quiz 3 | [Solutions](/Quizzes/Quiz_3_Solution.pdf) |
-| Wednesday, October 6 |  Quiz 4 | [Solutions](/Quizzes/Quiz_4_Solution.pdf) |
-| Wednesday, October 13  | Quiz 5 | [Solutions](/Quizzes/Quiz_5_Solution.pdf) |
-| Wednesday, October 20 |  Quiz 6 | [Solutions](/Quizzes/Quiz_6_Solution.pdf) |
-| Wednesday, October 27 |  Quiz 7 | [Solutions](/Quizzes/Quiz_7_Solution.pdf) |
-| Wednesday, November 3 |  Quiz 8 |  |
-| Wednesday, November 10 |  Quiz 9 |  |
-| Wednesday, November 17 |  Quiz 10 |  |
-| Wednesday, November 24 |  Quiz 11  | |
-| Wednesday, December 1 |  Quiz 12 |  |
-| Wednesday, December 8 |  Quiz 13 | |
-| Wednesday, December 15 | Quiz 14 |  |
+| Wednesday, September 15 |  [Quiz 1](/Quizzes/Quiz_1_Solution.pdf) |
+| Wednesday, September 22 |  [Quiz 2](/Quizzes/Quiz_2_Solution.png)  |
+| Wednesday, September 29 |  [Quiz 3](/Quizzes/Quiz_3_Solution.pdf) |
+| Wednesday, October 6 |  [Quiz 4](/Quizzes/Quiz_4_Solution.pdf) |
+| Wednesday, October 13  | [Quiz 5](/Quizzes/Quiz_5_Solution.pdf) |
+| Wednesday, October 20 |  [Quiz 6](/Quizzes/Quiz_6_Solution.pdf) |
+| Wednesday, November 3 |  [Quiz 7](/Quizzes/Quiz_7_Solution.pdf) |
+| Wednesday, November 10 |  Quiz 8 |  
+| Wednesday, November 17 |  Quiz 9 |  
+| Wednesday, November 24 |  Quiz 10 |  
+| Wednesday, December 1 |  Quiz 11  | 
+| Wednesday, December 8 |  Quiz 12 |  
+| Wednesday, December 15 |  Quiz 13 | 
+
 
 
 ## Resources
