update quizzes, worksheets

--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -55,15 +55,15 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, November 3 | 4.2 The Definite Integral | [Worksheet 19](Worksheets/221-Wk9.2-Sec4.2.pdf) | [Solutions](Worksheets/221-Wk9.2-Sec4.2solns.pdf) |
 | Monday, November 8 | 4.3 The Fundamental Theorem of Calculus | [Worksheet 20](Worksheets/221-Wk10.1-Sec4.3.pdf) | [Solutions](Worksheets/221-Wk10.1-Sec4.3solns.pdf) |
 | Wednesday, November 10 | 4.4-5 Indefinite Integrals and Substitution Rule  | [Worksheet 21](Worksheets/221-Wk10.2-Sec4.4,4.5.pdf) | [Solutions](Worksheets/221-Wk10.2-Sec4.4,4.5solns.pdf) |
-| Monday, November 15 | 6.1-2 Inverse and Exponential Functions | [Worksheet 22](Worksheets/221-Wk11.2-Sec4.5, 6.1, 6.2.pdf) | [Solutions](Worksheets/221-Wk11.2-Sec4.5, 6.1, 6.2solns.pdf) |
-| Wednesday, November 17 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 23](Worksheets/221-Wk12.1-Sec6.3, 6.4.pdf) | [Solutions](Worksheets/221-Wk12.1-Sec6.3, 6.4solns.pdf) |
-| Monday, November 22 | 6.6 Inverse Trigonmetric Functions | [Worksheet 24](Worksheets/221-Wk12.2-Sec6.6.pdf) | [Solutions](Worksheets/221-Wk12.2-Sec6.6solns.pdf) |
-| Wednesday, November 24 | 6.8 L'Hospital's Rule  | [Worksheet 25](Worksheets/221-Wk13.1-Sec6.8.pdf) | [Solutions](Worksheets/221-Wk13.1-Sec6.8solns.pdf) |
-| Monday, November 29 | 5.1-2 Areas and Volumes | [Worksheet 26](Worksheets/221-Wk13.2-Sec5.1, 5.2.pdf) | [Solutions](Worksheets/221-Wk13.2-Sec5.1, 5.2solns.pdf) |
-| Wednesday, December 1 | 5.2 Volumes | [Worksheet 27](Worksheets/221-Wk14.1-Sec5.2 and Final Review.pdf) | [Solutions](Worksheets/221-Wk14.1-Sec5.2 and Final Reviewsolns.pdf) |
-| Monday, December 6 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | [Worksheet 28](Worksheets/221-Wk14.2-Sec5.3,5.4 and Final Review.pdf) | [Solutions](Worksheets/221-Wk14.2-Sec5.3,5.4 and Final Reviewsolns.pdf) |
-| Wednesday, December 8 | N/A | Worksheet 29 |  |
-| | Final Review |  | |
+| Monday, November 15 | Midterm 2 Review | [Worksheet 21](Worksheets/221-Wk11.1-Midterm 2 Review.pdf) | [Solutions](Worksheets/221-Wk11.1-Midterm 2 Reviewsolns.pdf) |
+| Monday, November 22 | 6.1-2 Inverse and Exponential Functions | [Worksheet 22](Worksheets/221-Wk11.2-Sec4.5, 6.1, 6.2.pdf) | [Solutions](Worksheets/221-Wk11.2-Sec4.5, 6.1, 6.2solns.pdf) |
+| Wednesday, November 24 | 6.3-4 Logarithmic Functions and their Derivatives | [Worksheet 23](Worksheets/221-Wk12.1-Sec6.3, 6.4.pdf) | [Solutions](Worksheets/221-Wk12.1-Sec6.3, 6.4solns.pdf) |
+| Monday, November 29 | 6.6 Inverse Trigonmetric Functions | [Worksheet 24](Worksheets/221-Wk12.2-Sec6.6.pdf) | [Solutions](Worksheets/221-Wk12.2-Sec6.6solns.pdf) |
+| Wednesday, December 1 | 6.8 L'Hospital's Rule  | [Worksheet 25](Worksheets/221-Wk13.1-Sec6.8.pdf) | [Solutions](Worksheets/221-Wk13.1-Sec6.8solns.pdf) |
+| Monday, December 6 | 5.1-2 Areas and Volumes | [Worksheet 26](Worksheets/221-Wk13.2-Sec5.1, 5.2.pdf) | [Solutions](Worksheets/221-Wk13.2-Sec5.1, 5.2solns.pdf) |
+| Wednesday, December 8 | 5.2 Volumes | [Worksheet 27](Worksheets/221-Wk14.1-Sec5.2 and Final Review.pdf) | [Solutions](Worksheets/221-Wk14.1-Sec5.2 and Final Reviewsolns.pdf) |
+| Monday, December 13 | 5.3, 5.5 Cyclindrical Shells and Averaging Functions | [Worksheet 28](Worksheets/221-Wk14.2-Sec5.3,5.4 and Final Review.pdf) | [Solutions](Worksheets/221-Wk14.2-Sec5.3,5.4 and Final Reviewsolns.pdf) |
+| Wednesday, December 15 | N/A | Worksheet 29 |  |
 
 
 ## Quizzes
