--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -77,7 +77,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 | Wednesday, October 13  | [Quiz 5](/Quizzes/Quiz_5_Solution.pdf) |
 | Wednesday, October 20 |  [Quiz 6](/Quizzes/Quiz_6_Solution.pdf) |
 | Wednesday, November 3 |  [Quiz 7](/Quizzes/Quiz_7_Solution.pdf) |
-| Wednesday, November 10 |  Quiz 8 |  
+| Wednesday, November 10 |  [Quiz 8](/Quizzes/Quiz_8_Solution.pdf) |  
 | Wednesday, November 17 |  Quiz 9 |  
 | Wednesday, December 1 |  Quiz 10  | 
 | Wednesday, December 8 |  Quiz 11 |  
