Revert "add aria hidden"
This reverts commit 0de214d44d16cb366802aba173ce03a4d78b35fd.

--- a/classes/221Fall2020/221Fall2020.md
+++ b/classes/221Fall2020/221Fall2020.md
@@ -18,11 +18,11 @@ At the time of the discussion section, you can join via Zoom using the button be
 
 <div class="button-container" style="text-align: center">
     <a href="https://www.cengage.com/c/calculus-8e-stewart/9781285740621PF/" class="button" style="margin:5px">
-    <i class="fas fa-book" aria-hidden="true"></i>
+    <i class="fas fa-book"></i>
     Book
     </a>
     <a href="https://uwmadison.zoom.us/j/95073751731?pwd=M0lHY1p4aXJHR3pWZjJhNG9wK3RSZz09" class="button" style="margin:5px">
-    <i class="fas fa-video" aria-hidden="true"></i>
+    <i class="fas fa-video"></i>
     Zoom
     </a>
 </div>
