--- a/classes/221Fall2021/221Fall2021.md
+++ b/classes/221Fall2021/221Fall2021.md
@@ -20,11 +20,11 @@ If you'd like to offer anonymous feedback to me, click the button below.
 
 <div class="button-container" style="text-align: center">
     <a href="https://www.cengage.com/c/calculus-8e-stewart/9781285740621PF/" class="button" style="margin:5px">
-    <i class="fas fa-book" aria-hidden="true"></i>
+    <i class="fas fa-book"></i>
     Book
     </a>
     <a href="https://forms.gle/vWJiy4654gcWQoDA8" class="button" style="margin:5px">
-    <i class="fas fa-comment" aria-hidden="true"></i>
+    <i class="fas fa-comment"></i>
     Feedback
     </a>
 </div>
