--- a/classes/221Fall2022/221Fall2022.md
+++ b/classes/221Fall2022/221Fall2022.md
@@ -1,11 +1,11 @@
 ---
 layout: page
 permalink: teaching/221Fall2022
-title: Calculus I
+title: Calculus III
 class: class
 ---
 
-# MATH 221: Calculus and Analytic Geometry I (DISC 305 and 306)
+# MATH 234: Calculus - Functions of Several Variables  (DISC 369 and 370)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
 #### **Office Hours:**  TBA
