--- a/classes/221Fall2022/221Fall2022.md
+++ b/classes/221Fall2022/221Fall2022.md
@@ -8,11 +8,11 @@ class: class
 # MATH 234: Calculus - Functions of Several Variables  (DISC 369 and 370)
 ![fire calculus picture](/images/projects/calculus1.jpg)
 
-#### **Office Hours:**  TBA
+#### **Office Hours:**  9:30-10:30 Tuesdays and Thursdays in Van Vleck B224 (Upstairs)
 
 ## Essential Information
 
-The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/261730). We have quizzes every Wednesday based on the material of Thursday's lecture -- this is worth 4% of your final grade.
+The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/261730). We have quizzes every Wednesday based on the material of Thursday's lecture -- this is worth 4% of your final grade. All solutions to quizzes and worksheets will be posted to Canvas promptly.
 
 When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/kt4qkk7ybq74jg) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue. 
 
@@ -28,61 +28,6 @@ If you'd like to offer anonymous feedback to me, click the button below.
     Feedback
     </a>
 </div>
-
-
-## Worksheets & Solutions
-
-| Date | Topic | Worksheet |  Solutions |
-| :--------- | :---------  | :-----  | :---- |
-| Wednesday, September 7   | Calc 1 and 2 Review | Worksheet 1 | Solutions | 
-| Monday, September 12 |  | Worksheet 2 | Solutions  | 
-| Wednesday, September 14 |  | Worksheet 3 | Solutions  | 
-| Monday, September 19 |  | Worksheet 4 | Solutions  | 
-| Wednesday, September 21 |  | Worksheet 5 | Solutions  |
-| Monday, September 26|  | Worksheet 6 | Solutions | 
-| Wednesday, September 28 |  | Worksheet 7 | Solutions |
-| Monday, October 3 |  | Worksheet 8 | Solutions |
-| Wednesday, October 5 | | Worksheet 9 | Solutions |
-| Monday, October 10 |  | Worksheet 10 | Solutions|
-| Wednesday, October 12 |  | Worksheet 11 | Solutions |
-| Monday, October 17 |  | Worksheet 12 | Solutions |
-| Wednesday, October 19 |  | Worksheet 13 | Solutions |
-| Monday, October 24 |  | Worksheet 14 | Solutions |
-| Wednesday, October 26 |   | Worksheet 15 | Solutions |
-| Monday, October 31 |  | Worksheet 16 | Solutions |
-| Wednesday, November 2 |   | Worksheet 17 | Solutions |
-| Monday, November 7 |  | Worksheet 18 | Solutions |
-| Wednesday, November 9 |  | Worksheet 19 | Solutions |
-| Monday, November 14 |  | Worksheet 20 | Solutions |
-| Wednesday, November 16 |   | Worksheet 21 | Solutions |
-| Monday, November 21 |  | Worksheet 21 | Solutions |
-| Wednesday, November 23 |  | Worksheet 22 | Solutions |
-| Monday, November 28 |  | Worksheet 23 | Solutions |
-| Wednesday, November 30 |  | Worksheet 24 | Solutions |
-| Monday, December 5 |   | Worksheet 25 | Solutions |
-| Wednesday, December 7 |  | Worksheet 26 | Solutions |
-| Monday, December 12 |  | Worksheet 27 | Solutions |
-| Wednesday, December 14 |  | Worksheet 28 | Solutions |
-
-
-## Quizzes
-
-| Date | Quiz Solutions |
-| :--------- | :-----  | :---- |
-| Wednesday, September 14 | Quiz 1 |
-| Wednesday, September 21 |  Quiz 2  |
-| Wednesday, September 28 | Quiz 3 |
-| Wednesday, October 5 |  Quiz 4 |
-| Wednesday, October 12  | Quiz 5 |
-| Wednesday, October 19 |  Quiz 6 |
-| Wednesday, November 2 |  Quiz 7 |
-| Wednesday, November 9 |  Quiz 8 |  
-| Wednesday, November 16 |  Quiz 9 |  
-| Wednesday, November 30 |  Quiz 10  | 
-| Wednesday, December 7 |  Quiz 11 |  
-| Wednesday, December 14 |  Quiz 12 | 
-
-
 
 ## Resources
 
