--- a/classes/234Spring2023/234Spring2023.md
+++ b/classes/234Spring2023/234Spring2023.md
@@ -1,20 +1,20 @@
 ---
 layout: page
-permalink: teaching/221Fall2022
+permalink: teaching/234Spring2023
 title: Calculus III
 class: class
 ---
 
-# MATH 234: Calculus - Functions of Several Variables  (DISC 369 and 370)
-![fire calculus picture](/images/projects/calculus1.jpg)
+# MATH 234: Calculus - Functions of Several Variables  (DISC 343 and 345)
+![fire calculus picture](/images/projects/calculus3.jpg)
 
-#### **Office Hours:**  9:30-10:30 Tuesdays and Thursdays in Van Vleck B224 (Upstairs)
+#### **Office Hours:**  9:00-10:00 Fridays and 11:00-12:00 Mondays in Van Vleck B224 (Upstairs)
 
 ## Essential Information
 
-The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/261730). We have quizzes every Wednesday based on the material of Thursday's lecture -- this is worth 4% of your final grade. All solutions to quizzes and worksheets will be posted to Canvas promptly.
+The central location for all course-related information (schedule, homework, syllabus, etc) is [Canvas](https://canvas.wisc.edu/courses/334496). We have quizzes every Wednesday based on the material of Thursday's lecture -- this is worth 4% of your final grade. All solutions to quizzes and worksheets will be posted to Canvas promptly.
 
-When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/kt4qkk7ybq74jg) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue. 
+When you have a question, of course feel free to [email me](mailto:{{ site.email }}) but also please consider posting it to [Piazza](https://piazza.com/class/lcurmcmdap439p) (which you can do anonymously!) so that everyone can benefit from the discussion. It is incredibly likely that someone else is struggling with a similar issue. 
 
 If you'd like to offer anonymous feedback to me, click the button below.
 
@@ -33,7 +33,7 @@ If you'd like to offer anonymous feedback to me, click the button below.
 
 It is okay if you get confused. Luckily for us, there are many great resources for the modern calculus student. 
 
-- Your fellow classmates should be your primary resource. Post to [Piazza](https://piazza.com/class/l6l9x5kjrjm77d) as yourself or anonymously to discuss material with the people that are learning it at the same time as you.
+- Your fellow classmates should be your primary resource. Post to [Piazza](https://piazza.com/class/lcurmcmdap439p) as yourself or anonymously to discuss material with the people that are learning it at the same time as you.
 - [Paul's Online Notes](https://tutorial.math.lamar.edu/Classes/CalcIII/CalcIII.aspx) are very clear and have worked out examples and practice problems. His notes are good at getting to the *practical* things you need to know to solve problems.
 - [Professor Leonard](https://www.youtube.com/channel/UCoHhuummRZaIVX7bD4t2czg) basically taught me all of Calculus 3. He also inspires me to work out. Seriously, check him out.
 - [WolframAlpha](https://www.wolframalpha.com/) can compute answers to essentially any calculus query that you enter, although the free version will not provide worked out solutions. Fortunately, UW Madison provides [a license to Mathematica](https://software.wisc.edu/cgi-bin/ssl/csl_download.cgi) which properly contains WolframAlpha.
