--- a/organization/3264.md
+++ b/organization/3264.md
@@ -29,20 +29,21 @@ We are reading 3264 and all that by David Eisenbud and Joe Harris. If you'd like
 
 ## Schedule 
 
+We are meeting on Fridays from 5-6 PM.
+
 | Date                    | Speaker      | Reading |
 | :---------              | :---------  | :-----  |
-| Week 1   | John Cobb  | 1.2 and 1.3.1-1.3.5 The Chow ring (16 pages)  |  
-| Week 2  | TBA | 1.3.6-1.4 Functoriality, transversality, canonical classes (14 pages) |
-| Week 3  | TBA | 2.1.1-2.1.7 Computing examples (11 pages) |
-| Week 4  | TBA | 2.1.9-2.3 Computing more examples (13 pages) |
-| Week 5  | TBA | 2.4-2.5 Curves on Surfaces (10 pages) |
-| Week 6  | TBA | 3.1-3.2 Intro to Grassmannians (17 pages) |
-| Week 7  | TBA | 3.3-3.4 $$\mathbb{G}(1,3)$$ (13 pages) |
-| Week 8  | TBA | 3.5-3.6 Lines and surfaces in $$\mathbb{P}^3$$ (18 pages) |
-| Week 9  | TBA | Ch. 4 Generalizing to all Grassmannians (34 pages) |
-| Week 10 | TBA | Ch. 5 Chern Classes   (28 pages) |
-| Week 11 | TBA | 6.1-6.3 Fano and Hilbert Schemes (15) |
-| Week 12 | TBA | 6.4-6.5 Tangent spaces on Fano and Hilberts, 27 lines on a cubic (19) |
+| Week 1 (2/10)   | John Cobb  | 1.2 and 1.3.1-1.3.5 The Chow ring (16 pages)  |  
+| Week 2 (2/17) | TBA | 1.3.6-1.4 Functoriality, transversality, canonical classes (14 pages) |
+| Week 3 (2/24)  | TBA | 2.1.1-2.1.7 Computing examples (11 pages) |
+| Week 4 (3/3)  | TBA | 2.1.9-2.3 Computing more examples (13 pages) |
+| Week 5 (3/10)  | TBA | 2.4-2.5 Curves on Surfaces (10 pages) |
+| Week 6 (3/24)  | TBA | 3.1-3.2 Intro to Grassmannians (17 pages) |
+| Week 7 (3/31)  | TBA | 3.3-3.4 $$\mathbb{G}(1,3)$$ (13 pages) |
+| Week 8 (3/7)  | TBA | 3.5-3.6 Lines and surfaces in $$\mathbb{P}^3$$ (18 pages) |
+| Week 9 (3/21)  | TBA | Ch. 4 Generalizing to all Grassmannians (34 pages) |
+| Week 10 (3/28) | TBA | Ch. 5 Chern Classes   (28 pages) |
+| Week 11 (3/5) | TBA | 6.1-6.3 Fano and Hilbert Schemes (15) |
 
 ## Meeting Structure
 While reading, write any questions you have and bring them. Each week the speaker will be giving a ~30 minute talk summarizing and motivating the reading that week, skipping proofs and focusing on how to use the theorems and objects. Note that being the speaker does *not* mean you are expected to know everything -- You can have lots of questions too. During the talk, you should ask your questions for everyone to collectively discuss, perhaps saving any "harder" questions for the end.
