update speaker expectations

--- a/organization/3264.md
+++ b/organization/3264.md
@@ -46,4 +46,4 @@ We are meeting on Fridays from 5-6 PM.
 | Week 11 (3/5) | TBA | 6.1-6.3 Fano and Hilbert Schemes (15) |
 
 ## Meeting Structure
-While reading, write any questions you have and bring them. Each week the speaker will be giving a ~30 minute talk summarizing and motivating the reading that week, skipping proofs and focusing on how to use the theorems and objects. Note that being the speaker does *not* mean you are expected to know everything -- You can have lots of questions too. During the talk, you should ask your questions for everyone to collectively discuss, perhaps saving any "harder" questions for the end.
+While reading, write any questions you have and bring them. Each week the speaker will be giving a ~15 minute talk summarizing the reading that week (maybe bullet-point style), skipping proofs and focusing on how to use the theorems and objects. Note that being the speaker does *not* mean you are expected to know everything -- You can have lots of questions too. After, we can all discuss questions we had on the reading. 
