I'm speaking the next two times

--- a/organization/3264.md
+++ b/organization/3264.md
@@ -36,8 +36,8 @@ We are meeting on Fridays from 5-6 PM.
 | Week 1 (2/10)   | John Cobb  | 1.2 and 1.3.1-1.3.5 The Chow ring (16 pages)  |  
 | Week 2 (2/17) | Kevin Dao | 1.3.6-1.4 Functoriality, transversality, canonical classes (14 pages) |
 | Week 3 (2/24)  | Alejo Salvatore | 2.1.1-2.1.7 Computing examples (11 pages) |
-| Week 4 (3/3)  | TBA | 2.1.9-2.3 Computing more examples (13 pages) |
-| Week 5 (3/10)  | TBA | 2.4-2.5 Curves on Surfaces (10 pages) |
+| Week 4 (3/3)  | John Cobb | 2.1.9-2.3 Computing more examples (13 pages) |
+| Week 5 (3/10)  | John Cobb | 2.4-2.5 Curves on Surfaces (10 pages) |
 | Week 6 (3/24)  | TBA | 3.1-3.2 Intro to Grassmannians (17 pages) |
 | Week 7 (3/31)  | TBA | 3.3-3.4 $$\mathbb{G}(1,3)$$ (13 pages) |
 | Week 8 (3/7)  | TBA | 3.5-3.6 Lines and surfaces in $$\mathbb{P}^3$$ (18 pages) |
