--- a/organization/3264.md
+++ b/organization/3264.md
@@ -38,7 +38,7 @@ We are meeting on Fridays from 5-6 PM.
 | Week 3 (2/24)  | Alejo Salvatore | 2.1.1-2.1.7 Computing examples (11 pages) |
 | Week 4 (3/3)  | John Cobb | 2.1.9-2.3 Computing more examples (13 pages) |
 | Week 5 (3/10)  | John Cobb | 2.4-2.5 Curves on Surfaces (10 pages) |
-| Week 6 (3/24)  | TBA | 3.1-3.2 Intro to Grassmannians (17 pages) |
+| Week 6 (3/24)  | John Cobb | 3.1-3.2 Intro to Grassmannians (17 pages) |
 | Week 7 (3/31)  | TBA | 3.3-3.4 $$\mathbb{G}(1,3)$$ (13 pages) |
 | Week 8 (3/7)  | TBA | 3.5-3.6 Lines and surfaces in $$\mathbb{P}^3$$ (18 pages) |
 | Week 9 (3/21)  | TBA | Ch. 4 Generalizing to all Grassmannians (34 pages) |
