--- a/classes/222Fall2023/222Fall2023.md
+++ b/classes/222Fall2023/222Fall2023.md
@@ -8,7 +8,7 @@ class: class
 # MATH 222: Calculus 2 (DISC 306 and 310)
 ![fire calculus picture](/images/projects/calculus2.jpg)
 
-#### **Office Hours:**  10:00-11:00 Wednesdays and Fridays location TBD
+#### **Office Hours:**  10:00-11:00 Wednesdays and Fridays in Math Learning Center (Van Vleck B224)
 
 ## Essential Information
 
