update to pull from saved photos

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -7,7 +7,7 @@ sections: Overview, Talks, Schedule, Participant Information, Funding
 ---
 
 # Meetings in Applied Algebraic Geometry 2025
-![Auburn](https://auphoto.auburn.edu/_assets/images/index-header-02.jpg "An image of Auburn, AL from the Auburn Photographic Services.") 
+![Auburn](/images/projects/auburn.jpg "An image of Auburn, AL from the Auburn Photographic Services.") 
 #### April 12-13, 2025
 Organizers: [John Cobb](https://johndcobb.github.io), [Luke Oeding](http://webhome.auburn.edu/~lao0004/), [Michael Burr](https://cecas.clemson.edu/~burr2/), [Kisun Lee](https://klee669.github.io), and [Anton Leykin](https://antonleykin.math.gatech.edu).
 
