--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -18,7 +18,20 @@ The Meeting on Applied Algebraic Geometry (MAAG 2025) is a regional gathering wh
 TBA
 
 ## Schedule
-TBA
+
+| Time             | Saturday                | Sunday                  |
+| :--------------: | :---------------------- | :---------------------- |
+| 8:30 -- 9:00     | *Registration + Coffee* | *Registration + Coffee* |
+| 9:00 -- 9:50     | Speaker 1               | Speaker 6               |
+| 9:55 -- 10:45    | Speaker 2               | Speaker 7               |
+| 10:45 -- 11:00   | *Short Break*           | **Short Break**         |
+| 11:00 -- 11:50   | Speaker 3               | Speaker 8               |
+| 11:50 -- 1:50    | *Lunch*                 | *Lunch*                 |
+| 1:50 -- 2:40     | Speaker 4               |                         |
+| 2:45 -- 3:35     | Speaker 5               |                         |
+| 3:35 -- 4:05     | *Coffee break*          |                         |
+| 4:05 -- 5:00     | Turbo talks             |                         |
+| Evening          | Conference Outing       |                         |
 
 ## Participant Information
 TBA
