dont need extra lunch here

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -26,7 +26,7 @@ TBA
 | 9:55 -- 10:45    | Speaker 2               | Speaker 7               |
 | 10:45 -- 11:00   | *Short Break*           | **Short Break**         |
 | 11:00 -- 11:50   | Speaker 3               | Speaker 8               |
-| 11:50 -- 1:50    | *Lunch*                 | *Lunch*                 |
+| 11:50 -- 1:50    | *Lunch*                 |                         |
 | 1:50 -- 2:40     | Speaker 4               |                         |
 | 2:45 -- 3:35     | Speaker 5               |                         |
 | 3:35 -- 4:05     | *Coffee break*          |                         |
