make links relative

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -15,7 +15,8 @@ Organizers: [John Cobb](https://johndcobb.github.io), [Luke Oeding](http://webho
 The Meeting on Applied Algebraic Geometry (MAAG 2025) is a regional gathering which attracts participants primarily from the South-East of the United States. Previous meetings took place at Georgia Tech in [2015](https://sites.google.com/site/magaspring15/), [2018](https://sites.google.com/view/maag-2018/home), [2019](https://sites.google.com/view/maag2019/home), and [2023](https://sites.google.com/view/maag-2023/home) and at Clemson in [2016](https://www.math.clemson.edu/aca/maga16/). 
 
 ## Talks
-TBA
+There are eight 50-minute talks by:
+- [Thomas Kahle](https://thomas-kahle.de) (OvGU Magdeburg)
 
 ## Schedule
 
