update with TBA placeholders

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -17,6 +17,12 @@ The Meeting on Applied Algebraic Geometry (MAAG 2025) is a regional gathering wh
 ## Talks
 There are eight 50-minute talks by:
 - [Thomas Kahle](https://thomas-kahle.de) (OvGU Magdeburg)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
+
+- TBA
 
 ## Schedule
 
