--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -22,6 +22,12 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
+- [Felice Manganiello](http://www.math.clemson.edu/~manganm/?section=1) (Clemson University)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
+
 - TBA
 
 ## Schedule
