--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -37,7 +37,7 @@ There are eight 50-minute talks by:
 | 8:30 -- 9:00     | *Registration + Coffee* | *Registration + Coffee* |
 | 9:00 -- 9:50     | Speaker 1               | Speaker 6               |
 | 9:55 -- 10:45    | Speaker 2               | Speaker 7               |
-| 10:45 -- 11:00   | *Short Break*           | **Short Break**         |
+| 10:45 -- 11:00   | *Short Break*           | *Short Break*         |
 | 11:00 -- 11:50   | Speaker 3               | Speaker 8               |
 | 11:50 -- 1:50    | *Lunch*                 |                         |
 | 1:50 -- 2:40     | Speaker 4               |                         |
