--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -28,6 +28,12 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
+- [Julia Lindberg](https://sites.google.com/view/julialindberg/home) (University of Texas-Austin)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
+
 - TBA
 
 ## Schedule
