--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -34,6 +34,12 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
+- [Michael Byrd](https://michael-byrd.github.io) (Clemson University)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
+
 - TBA
 
 ## Schedule
