--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -40,6 +40,12 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
+- [Parker Edwards](https://parkeredw.com) (Florida Atlantic University)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
+
 - TBA
 
 ## Schedule
