--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -46,6 +46,12 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
+- [Dustin Cartwright](https://web.math.utk.edu/~cartwright/) (University of Tennessee, Knoxville)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
+
 - TBA
 
 ## Schedule
