--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -52,6 +52,12 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
+- [Greg Blekherman](https://sites.google.com/site/grrigg/) (Georgia Tech)
+<details>
+    <summary> Title: TBA </summary>
+    Abstract: TBA
+</details>
+
 - TBA
 
 ## Schedule
