put that MAAG is happening in Auburn

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -12,7 +12,7 @@ sections: Overview, Talks, Schedule, Participant Information, Funding
 Organizers: [John Cobb](https://johndcobb.github.io), [Luke Oeding](http://webhome.auburn.edu/~lao0004/), [Michael Burr](https://cecas.clemson.edu/~burr2/), [Kisun Lee](https://klee669.github.io), and [Anton Leykin](https://antonleykin.math.gatech.edu).
 
 ## Overview
-The Meeting on Applied Algebraic Geometry (MAAG 2025) is a regional gathering which attracts participants primarily from the South-East of the United States. Previous meetings took place at Georgia Tech in [2015](https://sites.google.com/site/magaspring15/), [2018](https://sites.google.com/view/maag-2018/home), [2019](https://sites.google.com/view/maag2019/home), and [2023](https://sites.google.com/view/maag-2023/home) and at Clemson in [2016](https://www.math.clemson.edu/aca/maga16/). 
+The Meeting on Applied Algebraic Geometry (MAAG) is a regional gathering which attracts participants primarily from the South-East of the United States. MAAG 2025 takes place at Auburn University on April 12-13, 2025. Previous meetings took place at Georgia Tech in [2015](https://sites.google.com/site/magaspring15/), [2018](https://sites.google.com/view/maag-2018/home), [2019](https://sites.google.com/view/maag2019/home), and [2023](https://sites.google.com/view/maag-2023/home) and at Clemson in [2016](https://www.math.clemson.edu/aca/maga16/). 
 
 ## Talks
 There are eight 50-minute talks by:
