Add Irina Kogan

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -53,12 +53,16 @@ There are eight 50-minute talks by:
     </details>
 
 - [Greg Blekherman](https://sites.google.com/site/grrigg/) (Georgia Tech)
-<details>
-    <summary> Title: TBA </summary>
-    Abstract: TBA
-</details>
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
 
-- TBA
+- [Irina Kogan](https://iakogan.math.ncsu.edu) (North Carolina State University)
+    <details>
+        <summary> Title: TBA </summary>
+        Abstract: TBA
+    </details>
 
 ## Schedule
 
