add funding date

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -14,6 +14,7 @@ Organizers: [John Cobb](https://johndcobb.github.io), [Luke Oeding](http://webho
 ## Overview
 The Meeting on Applied Algebraic Geometry (MAAG) is a regional gathering which attracts participants primarily from the South-East of the United States. MAAG 2025 takes place at Auburn University on April 12-13, 2025. Previous meetings took place at Georgia Tech in [2015](https://sites.google.com/site/magaspring15/), [2018](https://sites.google.com/view/maag-2018/home), [2019](https://sites.google.com/view/maag2019/home), and [2023](https://sites.google.com/view/maag-2023/home) and at Clemson in [2016](https://www.math.clemson.edu/aca/maga16/). 
 
+For funding, please apply by February 28th.
 <div class="button-container" style="text-align: center">
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeat87c8R6wHVlk1l-lbarB4WEXdgfoqDOjkdlbY2koShCqFQ/viewform?usp=sharing" class="button" style="margin:5px">
     Register
