--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -89,6 +89,15 @@ There are eight 50-minute talks by:
 
 ## Participant Information
 TBA
+## Policies
+
+We are required by the NSF Proposal & Award Policies & Procedures Guide (Chapter II.E.7), effective February 25, 2019, to provide all event participants with information on the University’s policy on sexual and other forms of harassment or sexual assault as well as directions on how to report any violations of this policy. For purposes of this requirement, “other forms of harassment” is defined as “non-gender or non-sex-based harassment of individuals protected under federal civil rights laws, as set forth in organizational policies or codes of conduct, statutes, regulations, or executive orders.”
+
+Auburn University is committed to creating and maintaining a community dedicated to the advancement, application and transmission of knowledge and creative endeavors through academic excellence, where all individuals who participate in University programs and activities can work and learn together in an atmosphere free of harassment, exploitation, or intimidation.
+
+The University has general policies prohibiting harassment and discrimination on the basis of protected categories, including the Auburn University Policies Related to the Workplace; AA/EEO Policies and Procedures; and Code of Student Conduct.
+
+Any person may report incidents of sexual violence, sexual harassment, relationship violence, stalking, or other forms of prohibited behavior to the campus Title IX office. [aub.ie/TitleIX](aub.ie/TitleIX) has links to report an incident and additional information is available on this site.
 
 ## Funding
 We have applied for NSF funding to cover travel for all participants.
