add maag dms award

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -89,6 +89,7 @@ There are eight 50-minute talks by:
 
 ## Participant Information
 TBA
+
 ## Policies
 
 We are required by the NSF Proposal & Award Policies & Procedures Guide (Chapter II.E.7), effective February 25, 2019, to provide all event participants with information on the University’s policy on sexual and other forms of harassment or sexual assault as well as directions on how to report any violations of this policy. For purposes of this requirement, “other forms of harassment” is defined as “non-gender or non-sex-based harassment of individuals protected under federal civil rights laws, as set forth in organizational policies or codes of conduct, statutes, regulations, or executive orders.”
@@ -100,4 +101,4 @@ The University has general policies prohibiting harassment and discrimination on
 Any person may report incidents of sexual violence, sexual harassment, relationship violence, stalking, or other forms of prohibited behavior to the campus Title IX office. [aub.ie/TitleIX](aub.ie/TitleIX) has links to report an incident and additional information is available on this site.
 
 ## Funding
-We have applied for NSF funding to cover travel for all participants.
+This conference is supported all or in part by the National Science Foundation under DMS Award No. 2504328.
