Add Cartwright and Lindberg titles and abstracts

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -37,8 +37,8 @@ There are eight 50-minute talks by:
 
 - [Julia Lindberg](https://sites.google.com/view/julialindberg/home) (University of Texas-Austin)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Gaussian Voronoi Cells </summary>
+        Abstract: Gaussian discriminant analysis is a supervised learning algorithm for classification. Fundamental to understanding the performance of this algorithm is to understand the set of points closest to a given Gaussian, where "closest" is defined in terms of the maximum likelihood function. This set of points is the Gaussian Voronoi cell of the Gaussian. In this talk, I will outline new results regarding the geometry and combinatorics of Gaussian Voronoi cells and I will discuss implications for the expectation maximization (EM) algorithm, a popular method of density estimation for Gaussian mixture models. This is joint work with Joe Kileel.
     </details>
 
 - [Michael Byrd](https://michael-byrd.github.io) (Clemson University)
@@ -55,8 +55,8 @@ There are eight 50-minute talks by:
 
 - [Dustin Cartwright](https://web.math.utk.edu/~cartwright/) (University of Tennessee, Knoxville)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Faithful tropicalization of curves  </summary>
+        Abstract: Tropicalization of an algebraic curve has both an abstract version (as a dual graph) and an embedded version (as a polyhedral complex). A bridge that links the two is provided by faithful tropicalization, which depends on a suitable embedding. I will discuss work in progress on effective methods for finding embeddings for faithful tropicalizations. As a consequence, this gives computational methods for computing dual graphs.
     </details>
 
 - [Greg Blekherman](https://sites.google.com/site/grrigg/) (Georgia Tech)
