Add Kogan's title and abstract

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -65,10 +65,10 @@ There are eight 50-minute talks by:
         Abstract: TBA
     </details>
 
-- [Irina Kogan](https://iakogan.math.ncsu.edu) (North Carolina State University)
+- [Irina Kogan](https://iakogan.math.ncsu.edu) (North Carolina State University)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Equi-affine minimal-degree moving frames for polynomial curves </summary>
+        Abstract: Classical equivariant moving frames play an important role in differential geometry and invariant theory. However, these frames associated with a polynomial curve are, in general, neither polynomial nor even rational. We develop a theory and an algorithm for constructing minimal-degree polynomial moving frames for polynomial curves in an affine space. The algorithm is equivariant under volume-preserving affine transformations of the ambient space and the parameter shifts. We show that any matrix-completion algorithm can be turned into an equivariant moving frame algorithm via an equivariantization procedure that we develop. We prove that if a matrix-completion algorithm is of minimal degree, so is the resulting equivariant moving frame algorithm. We propose a novel minimal-degree matrix-completion algorithm, complementing the existing body of literature on this topic. This is a joint work with Hoon Hong, North Carolina State University.
     </details>
 
 ## Schedule
