Update talk details for Greg Blekherman in MAAG2025.md

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -61,8 +61,8 @@ There are eight 50-minute talks by:
 
 - [Greg Blekherman](https://sites.google.com/site/grrigg/) (Georgia Tech)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Stubborn polynomials </summary>
+        Abstract: A real polynomial $F$ nonnegative on a variety $X$ is stubborn if no odd power of $F$ is a sum of squares. Stubborn polynomials on smooth curves admit an elegant characterization, which can be leveraged to understand stubbornness on higher dimensional varieties. The case of the projective plane is already quite interesting and complicated, and I will present some results on stubborn sextics.
     </details>
 
 - [Irina Kogan](https://iakogan.math.ncsu.edu) (North Carolina State University)
