Add Macaulay2 Internals talk details and update abstract for Parker Edwards

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -49,8 +49,9 @@ There are eight 50-minute talks by:
 
 - [Parker Edwards](https://parkeredw.com) (Florida Atlantic University)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Computing local monodromy and local irreducible decompositions </summary>
+        Abstract: The standard approach to numerical algebraic geometry is global in the sense that one computes irreducible components, samples, etc. for a whole algebraic set. The theories of algebraic and analytic geometry are replete with interesting examples of local behavior, however. For instance: Given a singular point on a complex algebraic set, what is the minimum number of connected components in a stratification at the point?
+        I will discuss work with Jon Hauenstein developing theory and an algorithm for answering some of these types of questions. The strategy writ large is to begin with a generic finite linear projection, localize a generic fiber, localize the projection's singular locus, and partition the localized fiber by tracking monodromy loops. We prove that this procedure is exhausitve in the sense that we compute a generating set of loops for the appropriate fundamental group which acts on the fiber. I will also present several examples computed with an open source implementation of the algorithm.
     </details>
 
 - [Dustin Cartwright](https://web.math.utk.edu/~cartwright/) (University of Tennessee, Knoxville)
@@ -92,7 +93,7 @@ TBA
 
 ## Policies
 
-We are required by the NSF Proposal & Award Policies & Procedures Guide (Chapter II.E.7), effective February 25, 2019, to provide all event participants with information on the University’s policy on sexual and other forms of harassment or sexual assault as well as directions on how to report any violations of this policy. For purposes of this requirement, “other forms of harassment” is defined as “non-gender or non-sex-based harassment of individuals protected under federal civil rights laws, as set forth in organizational policies or codes of conduct, statutes, regulations, or executive orders.”
+We are required by the NSF Proposal & Award Policies & Procedures Guide (Chapter II.E.7), effective February 25, 2019, to provide all event participants with information on the University's policy on sexual and other forms of harassment or sexual assault as well as directions on how to report any violations of this policy. For purposes of this requirement, “other forms of harassment” is defined as “non-gender or non-sex-based harassment of individuals protected under federal civil rights laws, as set forth in organizational policies or codes of conduct, statutes, regulations, or executive orders.”
 
 Auburn University is committed to creating and maintaining a community dedicated to the advancement, application and transmission of knowledge and creative endeavors through academic excellence, where all individuals who participate in University programs and activities can work and learn together in an atmosphere free of harassment, exploitation, or intimidation.
 
