Update talk details for Felice Manganiello in MAAG2025.md

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -31,8 +31,8 @@ There are eight 50-minute talks by:
 
 - [Felice Manganiello](http://www.math.clemson.edu/~manganm/?section=1) (Clemson University)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Code-based Cryptography: The Future of Security Against Quantum Threats </summary>
+        Abstract: In today's digital age, where our personal data and information are predominantly stored online, security has become a crucial concern. The cryptographic standards currently in use are vulnerable to attacks from quantum computers, which may pose a significant threat in the coming years. Post-quantum cryptography is an area of research focusing on developing cryptosystems that can withstand quantum attacks while working on classical computers. Code-based cryptosystems have proven to be the most resilient over time among the various post-quantum cryptosystems. In this seminar, as a coding theorist, I will present the fundamentals of code-based cryptography, discuss how to build secure mechanisms like authenticated key exchanges, and provide guidelines to prevent weak instances that may create vulnerabilities. This presentation aims to enhance awareness of the importance of security and demonstrate the potential of code-based cryptography in safeguarding our online information against the quantum threat.
     </details>
 
 - [Julia Lindberg](https://sites.google.com/view/julialindberg/home) (University of Texas-Austin)
