Update MAAG2025.md with revised speaker schedule for Saturday and Sunday

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -77,13 +77,13 @@ There are eight 50-minute talks by:
 | Time             | Saturday                | Sunday                  |
 | :--------------: | :---------------------- | :---------------------- |
 | 8:30 -- 9:00     | *Registration + Coffee* | *Registration + Coffee* |
-| 9:00 -- 9:50     | Speaker 1               | Speaker 6               |
-| 9:55 -- 10:45    | Speaker 2               | Speaker 7               |
-| 10:45 -- 11:00   | *Short Break*           | *Short Break*         |
-| 11:00 -- 11:50   | Speaker 3               | Speaker 8               |
+| 9:00 -- 9:50     | Thomas Kahle            | Irina Kogan             |
+| 9:55 -- 10:45    | Dustin Cartwright       | Parker Edwards          |
+| 10:45 -- 11:00   | *Short Break*           | *Short Break*           |
+| 11:00 -- 11:50   | Felice Manganiello      | Michael Byrd            |
 | 11:50 -- 1:50    | *Lunch*                 |                         |
-| 1:50 -- 2:40     | Speaker 4               |                         |
-| 2:45 -- 3:35     | Speaker 5               |                         |
+| 1:50 -- 2:40     | Greg Blekherman         |                         |
+| 2:45 -- 3:35     | Julia Lindberg          |                         |
 | 3:35 -- 4:05     | *Coffee break*          |                         |
 | 4:05 -- 5:00     | Turbo talks             |                         |
 | Evening          | Conference Outing       |                         |
