Update MAAG2025.md with venue details and participant information

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -22,7 +22,7 @@ For funding, please apply by March 12th.
 </div>
 
 ## Talks
-There are eight 50-minute talks by:
+All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/academic/provost/active-learning/academic-classroom.php). There are eight 50-minute talks by:
 - [Thomas Kahle](https://thomas-kahle.de) (OvGU Magdeburg)
     <details>
         <summary> Title: The likelihood correspondence </summary>
@@ -89,7 +89,9 @@ There are eight 50-minute talks by:
 | Evening          | Conference Outing       |                         |
 
 ## Participant Information
-TBA
+Lodging: We will be housing all participants at the [The Hotel at Auburn University](https://www.auhcc.com). If you are driving, there is parking at the hotel for the price of $ \$ $25/night for valet parking or 20/night for self parking, which we can reimburse. There is also free parking on College Street on the weekends. 
+
+Airport: We recommend flying to ATL and then taking the [Groome Shuttle](https://groometransportation.com/?&sd_client_id=b9e0e5cc-7c56-4a88-bf69-84da218a0388).
 
 ## Policies
 
