Update MAAG2025.md with revised talk schedule for Saturday and Sunday

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -77,10 +77,10 @@ All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/acade
 | Time             | Saturday                | Sunday                  |
 | :--------------: | :---------------------- | :---------------------- |
 | 8:30 -- 9:00     | *Registration + Coffee* | *Registration + Coffee* |
-| 9:00 -- 9:50     | Thomas Kahle            | Irina Kogan             |
-| 9:55 -- 10:45    | Dustin Cartwright       | Parker Edwards          |
+| 9:00 -- 9:50     | Thomas Kahle            |  Irina Kogan            |
+| 9:55 -- 10:45    | Dustin Cartwright       |   Michael Byrd          |
 | 10:45 -- 11:00   | *Short Break*           | *Short Break*           |
-| 11:00 -- 11:50   | Felice Manganiello      | Michael Byrd            |
+| 11:00 -- 11:50   | Felice Manganiello      |  Parker Edwards         |
 | 11:50 -- 1:50    | *Lunch*                 |                         |
 | 1:50 -- 2:40     | Greg Blekherman         |                         |
 | 2:45 -- 3:35     | Julia Lindberg          |                         |
