--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -78,11 +78,11 @@ All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/acade
 | :--------------: | :---------------------- | :---------------------- |
 | 8:30 -- 9:00     | *Registration + Coffee* | *Registration + Coffee* |
 | 9:00 -- 9:50     | Thomas Kahle            |  Irina Kogan            |
-| 9:55 -- 10:45    | Dustin Cartwright       |   Michael Byrd          |
+| 9:55 -- 10:45    |  Parker Edwards         |  Michael Byrd           |
 | 10:45 -- 11:00   | *Short Break*           | *Short Break*           |
-| 11:00 -- 11:50   | Felice Manganiello      |  Parker Edwards         |
+| 11:00 -- 11:50   | Felice Manganiello      |  Greg Blekherman        |
 | 11:50 -- 1:50    | *Lunch*                 |                         |
-| 1:50 -- 2:40     | Greg Blekherman         |                         |
+| 1:50 -- 2:40     | Dustin Cartwright       |                         |
 | 2:45 -- 3:35     | Julia Lindberg          |                         |
 | 3:35 -- 4:05     | *Coffee break*          |                         |
 | 4:05 -- 5:00     | Turbo talks             |                         |
