Update MAAG2025.md with talk title and abstract for Michael Byrd

--- a/organizing/MAAG2025.md
+++ b/organizing/MAAG2025.md
@@ -43,8 +43,12 @@ All talks will take place in room 161 at the [ACLC](https://www.auburn.edu/acade
 
 - [Michael Byrd](https://michael-byrd.github.io) (Clemson University)
     <details>
-        <summary> Title: TBA </summary>
-        Abstract: TBA
+        <summary> Title: Certified approximation algorithms of algebraic curves </summary>
+        Abstract: A common challenge in computational algebraic geometry is to compute  certified approximations of algebraic curves. In this talk, we will look at two algorithms that solve versions of this task. The first task is to simultaneously approximate a set of curves given by bivariate polynomials. The second task is to approximate a generic projection of a regular curve to the plane.
+        
+        For the first task, we introduce an algorithm for approximating multiple curves in the plane. This is a nontrivial extension of the Plantinga and Vegter algorithm for approximating a single curve. We then follow this with an adaptive complexity analysis of our algorithm based on continuous amortization and condition numbers.
+        
+        For the second task, we use a two-step procedure to construct this approximation. The first step is construct a tubular neighborhood of a regular curve in $\mathbb{R}^n$. This is done using an extension of certified homotopy path tracking as introduced in Duff-Lee and Guillemot-Lairez. We then consider the projection of this approximation and provide conditions under which this image has the same topology as the projection of the curve.
     </details>
 
 - [Parker Edwards](https://parkeredw.com) (Florida Atlantic University)
